--- a/style.css
+++ b/style.css
@@ -26,30 +26,21 @@ body{
   display: grid;
   align-items: center;
   justify-items: center;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: 100px 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-}
-    
-.div1 { grid-area: 1 / 1 / 2 / 3; }
-.div2 { 
-  grid-area: 2 / 1 / 3 / 2;
-  margin-top: 30px;
- }
-.div3 { 
-  grid-area: 2 / 2 / 3 / 3;
-  margin-top: 30px;
-  margin-left: -200px;
-  width: 380px;
+  grid-row-gap: 40px;
 }
 
+.header{
+  width: 90%;
+  height: 90px;
+}
 .navegacao{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  height: 90px;
+  width: 100%;
+  height: 100%;
   border-bottom: 1px solid hsl(220, 14%, 75%);
 }
 .navegacao-1{
@@ -64,10 +55,23 @@ body{
   display: flex;
 }
 .navegacao-ul li a{
-  margin-right: 20px;
+  margin-right: 30px;
   color: var(--dark-grayish-blue);
   font-weight: 400;
   font-size: 15px;
+  position: relative;
+}
+
+.navegacao-ul li a:hover::after{
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 3px;
+  background-color: var(--orange);
+  bottom: -35px;
+  left: 0;
+  right: 0;
+  border-radius: 10px;
 }
 
 .navegacao-2{
@@ -84,10 +88,27 @@ body{
 .botao-perfil{
   cursor: pointer;
   width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+.botao-perfil:hover{
+  box-shadow: 0 0 0 2px var(--orange);
+}
+
+.main{
+  display: flex;
+  width: 90%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.produto-imagens img{
+  border-radius: 16px;
 }
 
 .container-produto{
-  width: 370px;
+  width: 440px;
   border-radius: 10px;
 }
 
@@ -99,10 +120,25 @@ body{
   margin-top: 16px;
 }
 .lista-produtos li{
-  width: 77px;
-}
-.imagens-main img{
+  position: relative;
   border-radius: 16px;
+  width: 80px;
+  height: 80px;
+}
+.lista-produtos li:hover:after{
+  box-shadow: 0 0 0 3px var(--orange);
+  content: '';
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color:  rgba(255, 255, 255, 0.3);
+}
+
+.produto-info{
+  width: 40%;
 }
 
 .titulo-info{
@@ -134,7 +170,7 @@ body{
 }
 .preco-atual{
   color: var(--very-dark-blue);
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 700;
   padding-right: 16px;
 }
@@ -149,7 +185,7 @@ body{
 .preco-antigo{
   color: var(--grayish-blue);
   font-weight: 700;
-  font-size: 17px;
+  font-size: 16px;
   text-decoration: line-through;
 }
 .botoes{
@@ -172,6 +208,17 @@ body{
 .botaomenos, .botaomais{
   cursor: pointer;
   padding: 5px;
+  position: relative;
+}
+.botaomenos:hover::after, .botaomais:hover::after{
+  content: '';
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color:  rgba(255, 255, 255, 0.3);
 }
 .botaomenos{
   padding: 5px 5px 10px 5px;
@@ -191,9 +238,22 @@ body{
   background-color: var(--orange);
   white-space: nowrap;
   cursor: pointer;
+  position: relative;
 }
 .botao-comprar span{
   width: 19px;
  margin-right: 10px;
 }
+
+.botao-comprar:hover:after{
+  content: '';
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color:  rgba(255, 255, 255, 0.3);
+}
+
 
